Fixed broken styles

--- a/css/inc/components/_header.scss
+++ b/css/inc/components/_header.scss
@@ -118,7 +118,7 @@ header.header {
 
 .header__social-links {
   display: none;
-  @media (min-width: 1506px) {
+  @media (min-width: 1634px) {
     display: flex;
   }
 }
